@@ -1,6 +1,7 @@
 2010-09-29  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
+	* Fixed bug #15863: htmlArea RTE: Initilization never completes in Google Chrome 7
 
 2010-09-29  Steffen Kamper  <steffen@typo3.org>
 
